--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -365,7 +365,44 @@ html {
 
 /******************************** 【 导航部分 END 】 ********************************************/
 
-
+/******************************** 【 主体部分 】 ************************************************/
+.main{
+    width: 7.5rem;
+    background: #f6f7fb;
+    position: relative;
+    overflow: hidden;
+}
+.banner-swiper{
+    width: 100%;
+    padding-top: 1.16rem ; 
+    -webkit-animation: fadeInUp .8s 0s ease-in-out;
+    -moz-animation: fadeInUp .8s 0s ease-in-out;
+    -ms-animation: fadeInUp .8s 0s ease-in-out;
+    animation: fadeInUp .8s 0s ease-in-out;
+}
+.banner-swiper .swiper-container {
+      width: 100%;
+      height: 100%;
+    }
+.banner-swiper .swiper-container .swiper-slide img{
+    width: 100%;
+}
+.banner-swiper .swiper-pagination{
+    height:  0.28rem!important;
+    bottom: 0.28rem!important;
+    line-height:0rem!important;
+}
+.banner-swiper .swiper-pagination .swiper-pagination-bullet{
+    width: 0.18rem;
+    height: 0.18rem;
+    background: #FFF!important;
+    opacity: 1!important;
+    border: 1px solid #FFF;
+}
+.banner-swiper .swiper-pagination .swiper-pagination-bullet-active {
+    opacity: 1;
+    border-color: #f40101;
+}
 
 /******************************** 【 导航部分 】 ************************************************/
 .footer_cont{
