--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -145,8 +145,12 @@ html {
 #hideNavCont{
     width: 100%;
     height: 100%;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
     display: none;
-    position: absolute;
+    position: fixed;
     z-index: 888;
     background: rgba(0,0,0,.6);
 }
@@ -365,45 +369,65 @@ html {
 
 /******************************** 【 导航部分 END 】 ********************************************/
 
-/******************************** 【 主体部分 】 ************************************************/
-.main{
-    width: 7.5rem;
-    background: #f6f7fb;
+/*标题*/
+.tiele-cont{
+    width: 100%;
+    height: 0.46rem;
+    padding: 0.36rem 0;
+    display：flex;
+}
+.tiele-cont h2{
+    padding: 0 0.36rem;
+    font-weight: normal;
+    float: left;
+}
+.tiele-cont h2 span{
+    margin-left: 0.36rem;
     position: relative;
-    overflow: hidden;
+    display: inline-block;
+    color: #434343;
 }
-.banner-swiper{
-    width: 100%;
-    padding-top: 1.16rem ; 
-    -webkit-animation: fadeInUp .8s 0s ease-in-out;
-    -moz-animation: fadeInUp .8s 0s ease-in-out;
-    -ms-animation: fadeInUp .8s 0s ease-in-out;
-    animation: fadeInUp .8s 0s ease-in-out;
+.tiele-cont h2 span i{
+    width: 1px;
+    height: 0.36rem;
+    left: -0.16rem;
+    position: absolute;
+    display: block;
+    background: #434343;
+    transform:rotate(25deg);
+    -ms-transform:rotate(25deg);
+    -moz-transform:rotate(25deg);
+    -webkit-transform:rotate(25deg);
+    -o-transform:rotate(25deg);
 }
-.banner-swiper .swiper-container {
-      width: 100%;
-      height: 100%;
-    }
-.banner-swiper .swiper-container .swiper-slide img{
-    width: 100%;
-}
-.banner-swiper .swiper-pagination{
-    height:  0.28rem!important;
-    bottom: 0.28rem!important;
-    line-height:0rem!important;
-}
-.banner-swiper .swiper-pagination .swiper-pagination-bullet{
-    width: 0.18rem;
-    height: 0.18rem;
-    background: #FFF!important;
-    opacity: 1!important;
-    border: 1px solid #FFF;
-}
-.banner-swiper .swiper-pagination .swiper-pagination-bullet-active {
-    opacity: 1;
-    border-color: #f40101;
+.tiele-cont .zhongx{
+    height: 0.1rem;
+    flex: 1;
+    margin-top: 0.2rem;
+    border: 1px solid #d7d7d7;
+    border-left: 0;
+    border-right: 0;
 }
 
+/*背景颜色*/
+.baise{
+    background: #FFF;
+}
+.huise{
+    background: #efefef;
+}
+.lanse{
+    background: #3395e1;
+}
+.fense{
+    background: #d05e4f;
+}
+.lvse{
+    background: #51b444;
+}
+.chengse{
+    background: #cf8e4e;
+}
 /******************************** 【 导航部分 】 ************************************************/
 .footer_cont{
     width: 7.5rem;
@@ -417,6 +441,7 @@ html {
 .footer_cont ul{
     width: 100%;
     height: 100%;
+    overflow: hidden;
     display: flex;
 }
 .footer_cont ul li{
