--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -131,7 +131,7 @@ html {
 }
 
 /*************************************导航部分************************************************/
-
+.ovfHiden{overflow: hidden;height: 100%;}
 /* nav */
 .public_nav {
     width: 100%;
@@ -151,6 +151,7 @@ html {
     right: 0;
     display: none;
     position: fixed;
+    overflow: hidden;
     z-index: 888;
     background: rgba(0,0,0,.6);
 }
