--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -393,6 +393,7 @@ html {
     width: 1px;
     height: 0.36rem;
     left: -0.16rem;
+    top: -0.04rem;
     position: absolute;
     display: block;
     background: #434343;
