--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -135,7 +135,7 @@ html {
 /* nav */
 .public_nav {
     width: 100%;
-    height: 1.16rem;
+    height: .8rem;
     position: fixed;
     z-index: 1000;
     top: 0;
@@ -198,7 +198,7 @@ html {
     flex-pack: justify;
     width: 100%;
     overflow: hidden;
-    height: 1.16rem;
+    height: 0.8rem;
     position: relative;
     z-index: 999;
     background: #1b1b1b;
@@ -207,10 +207,10 @@ html {
 .nav_btn .nav_logo {
     background: url(../img/logo.png) 0 0 no-repeat;
     background-size: 100% 100%;
-    width: 1.9rem;
-    height: 0.8rem;
+    width: 1.4rem;
+    height: 0.5rem;
     display: block;
-    margin:0.08rem auto;
+    margin:0.15rem auto;
 }
 /*菜单按钮*/
 .nav_btn .nav_btn_icon{
@@ -228,6 +228,8 @@ html {
     -webkit-box-pack: justify;
     -moz-box-pack: justify;
     box-pack: justify;
+    position: absolute;
+    right: 0;
     width: .4rem;
     height: .32rem;
     margin-right: .3rem
@@ -263,18 +265,19 @@ html {
 /*导航下拉部分*/
 .nav_cont{
     position: fixed;
-    width: 5.6rem;
+    width: 5rem;
     left: 0;
-    top: 1.16rem;
+    top: 0.8rem;
     bottom: 0;
     right: 0;
-    background: rgba(62,58,57,.96);
+    background: rgba(62,58,57);
     z-index: 998;
     overflow: hidden;
     display: none;
 }
 /*导航列表*/
 .nav_cont .nav-list{
+    min-height: 0.8rem;
     overflow: hidden;
     position: relative;
     border-bottom: 1px solid #9f9d9c;
@@ -288,13 +291,18 @@ html {
     color: #ABB1B7;
 }
 .nav_cont .nav-list a .nav-icon{
-    font-size: 0.45rem;
+    font-size: 0.42rem;
     position: absolute;
     margin-left: -1px;
 }
 .nav_cont .nav-list a span {
+    color: #FFF;
     font-size: 0.3rem;
     margin-left: 0.7rem;
+}
+.nav_cont .nav-list a i{
+    color: #FFF;
+    font-weight: normal;
 }
 /*箭头靠右*/
 .biticon-right{
@@ -311,13 +319,14 @@ html {
     overflow: hidden;
 }
 .nav-list .secondary_list li{
-    width: 4.8rem;
+    width: 4.2rem;
     margin: 0 auto;
     border-top: 1px dotted #9f9d9c;
 }
 
 .nav-list .secondary_list li span{
      margin-left: 0.32rem;
+     font-size: .28rem;
 }
 .nav-list ul {
     display: none;
@@ -465,6 +474,9 @@ html {
     width: 100%;
     height: 100%;
     display: block;
+}
+.footer_cont ul li p{
+    height: .5rem
 }
 .footer_cont ul li .footer-icon{
     font-size: 0.54rem;
