--- a/lbtMobile/css/public.css
+++ b/lbtMobile/css/public.css
@@ -153,7 +153,7 @@ html {
     position: fixed;
     overflow: hidden;
     z-index: 888;
-    background: rgba(0,0,0,.6);
+    background: rgba(0,0,0,.8);
 }
 /*下拉导航显示隐藏*/
 #hideNavCont.nav-show{
@@ -270,7 +270,7 @@ html {
     top: 0.8rem;
     bottom: 0;
     right: 0;
-    background: rgba(62,58,57);
+    background: #3e3a39;
     z-index: 998;
     overflow: hidden;
     display: none;
