--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -169,11 +169,61 @@
     width: 100%;
     overflow: hidden;
     background: #FFF;
-
-
-
-
-
+}
+.product-cont .product_tab{
+    width: 100%;
+    height: .6rem;
+    border:1px solid #CCC;
+    border-left: 0;
+    border-right: 0;
+}
+.product-cont .product_tab a{
+    width: 20%;
+    height: .58rem;
+    line-height: .58rem;
+    text-align: center;
+}
+.product-cont .product_tab .hover_tab{
+    color: #a53f39;
+    border-bottom: 0.02rem solid #a53f39;
+}
+.product-cont .product_list{
+    width: 6.78rem;
+    padding: .18rem 0.36rem;
+    overflow: hidden;
+}
+.product-cont .product_list li{
+    width: 3.03rem;
+    margin: .18rem;
+    float: left;
+}
+.product-cont .product_list li img{
+    width: 100%;
+    height: 100%;
+}
+.product-cont .product_more{
+    height: .7rem;
+}
+.product-cont .product_more a{
+    padding: 0 .16rem;
+    height: .6rem;
+    margin-right: .5rem;
+    line-height: .6rem;
+    border-radius: .3rem;
+    background: #efecf0;
+    display: block;
+    float: right;
+    -moz-box-shadow:2px 2px 4px #ccc;
+    -webkit-box-shadow:2px 2px 4px #ccc;
+    -ms-box-shadow:2px 2px 4px #ccc;
+    box-shadow:2px 2px 4px #ccc;
+}
+/*新闻资讯*/
+.news-cont{
+    width: 100%;
+    overflow: hidden;
+    background: #efefef;
+}
 
 
 
