--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -197,9 +197,10 @@
     margin: .18rem;
     float: left;
 }
-.product-cont .product_list li img{
+.product-cont .product_list li img,.product-cont .product_list li a{
     width: 100%;
     height: 100%;
+    display: block;
 }
 .product-cont .product_more{
     height: .7rem;
