--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -198,14 +198,12 @@
     height: 100%;
     display: block;
 }
-.product-cont .product_more{
+.product_more{
     height: .7rem;
 }
-.product-cont .product_more a{
-    padding:.16rem;
-    height: .3rem;
+.product_more a{
+    padding:.14rem;
     margin-right: .5rem;
-    line-height: .3rem;
     border-radius: .3rem;
     background: #efecf0;
     display: block;
@@ -219,11 +217,94 @@
 .news-cont{
     width: 100%;
     overflow: hidden;
+    padding-bottom: .18rem;
     background: #efefef;
 }
+.news-cont .news_list{
+    width: 6.78rem;
+    padding:0 .36rem ;
+    overflow: hidden;
+}
+.news-cont .news_list li{
+    width: 6.42rem;
+    padding: .18rem;
+    background: #FFF;
+    overflow: hidden;
+    margin-bottom: .3rem;
+    -moz-box-shadow:0px 0px 4px #ccc;
+    -webkit-box-shadow:0px 0px 4px #ccc;
+    -ms-box-shadow:0px 0px 4px #ccc;
+    box-shadow:0px 0px 4px #ccc;
+}
+.news-cont .news_list li:hover{
+    -moz-box-shadow:0px 0px 10px #ccc;
+    -webkit-box-shadow:0px 0px 10px #ccc;
+    -ms-box-shadow:0px 0px 10px #ccc;
+    box-shadow:0px 0px 10px #ccc;    
+}
+.news-cont .news_list li .date_cont{
+    width: 1rem;
+    height: 1rem;
+    padding: .18rem;
+    float: left;
+    position: relative;
+    background: #8d8d8d
+}
+.news-cont .news_list li .date_cont span{
+    width: .5rem;
+    height: .5rem;
+    line-height: .5rem;
+    text-align: center;
+    display: block;
+    color: #FFF;
 
-
-
-
+}
+.news-cont .news_list li .date_cont .month_cont{
+    padding-right: .5rem;
+    font-size: .48rem;
+}
+.news-cont .news_list li .date_cont .day_cont{
+    padding-left: .5rem;
+    font-size: .38rem;
+}
+.news-cont .news_list li .date_cont:before{
+    content: "";
+    position: absolute;
+    left: .7rem;
+    width: .02rem;
+    height: 1rem;
+    background: #FFF;
+    transform:rotate(45deg);
+    -ms-transform:rotate(45deg);
+    -moz-transform:rotate(45deg);
+    -webkit-transform:rotate(45deg);
+    -o-transform:rotate(45deg);
+}
+.news_text{
+    width: 4.92rem;
+    padding: .14rem;
+    padding-right: 0;
+    float: left;
+}
+.news_text h1{
+    font-weight: 530;
+    line-height: .6rem;
+    color: #000;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+}
+.news_text p{
+    line-height: .46rem;
+    font-size: .25rem;
+    color: #434343;
+    display: block;
+    overflow: hidden;
+    white-space: nowrap;
+    -o-text-overflow: ellipsis;
+    text-overflow: ellipsis;
+}
 
 
