--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -197,12 +197,24 @@
 .product-cont .product_list li{
     width: 3.03rem;
     margin: .18rem;
+    position: relative;
     float: left;
 }
 .product-cont .product_list li img,.product-cont .product_list li a{
     width: 100%;
     height: 100%;
     display: block;
+}
+.product-cont .product_list li h1{
+    width: 100%;
+    height: .6rem;
+    line-height: .6rem;
+    text-align: center;
+    color: #FFF;
+    font-weight: 540;
+    position: absolute;
+    bottom: 0;
+    background: rgba(0,0,0,0.6);
 }
 .product_more{
     height: .7rem;
