--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -6,35 +6,6 @@
     overflow: hidden;
     padding-bottom: 1.16rem;
 }
-/*焦点图*/
-.banner-swiper{
-    width: 100%;
-    padding-top: 0.8rem ; 
-}
-.banner-swiper .swiper-container {
-      width: 100%;
-      height: 100%;
-    }
-.banner-swiper .swiper-container .swiper-slide img{
-    width: 100%;
-}
-.banner-swiper .swiper-pagination{
-    height:  0.28rem!important;
-    bottom: 0.28rem!important;
-    line-height:0rem!important;
-}
-.banner-swiper .swiper-pagination .swiper-pagination-bullet{
-    width: 0.18rem;
-    height: 0.18rem;
-    background: #FFF!important;
-    opacity: 1!important;
-    border: 1px solid #FFF;
-}
-.banner-swiper .swiper-pagination .swiper-pagination-bullet-active {
-    opacity: 1;
-    border-color: #f40101;
-}
-
 /*分类*/
 .sort-cont{
     width: 100%;
@@ -64,23 +35,37 @@
     vertical-align: bottom;
 }
 .sort-cont ul li p{
-    width: 0.9rem;
-    height: 0.9rem;
+    width: 1.2rem;
+    height: 1.2rem;
     border-radius: 50%;
     text-align: center;
-    line-height: 0.92rem;
+    line-height: 1.22rem;
     display: block;
     margin: 0 auto;
+    -webkit-transition: -webkit-transform 0.5s ease-out;
+    -moz-transition: -moz-transform 0.5s ease-out;
+    -o-transition: -o-transform 0.5s ease-out;
+    -ms-transition: -ms-transform 0.5s ease-out;
 }
 .sort-cont ul li p i{
     color: #FFF;
     font-size: 0.54rem;
 }
+.sort-cont ul li:hover p{
+    -webkit-transform: rotateZ(360deg);
+    -moz-transform: rotateZ(360deg);
+    -o-transform: rotateZ(360deg);
+    -ms-transform: rotateZ(360deg);
+    transform: rotateZ(360deg);
+}
 .sort-cont ul li h1{
     padding: 0.1rem 0;
     font-weight: normal;
 }
-
+.sort-cont ul li p img{
+    width: 100%;
+    height: 100%;
+}
 
 /*主营业务*/
 .business-cont{
@@ -123,6 +108,9 @@
     float: right;
     font-weight: normal;
     color: #898989;
+}
+.business-cont .business_list li:hover h1 span{
+    color:  #cf0f32;
 }
 .business-cont .business_list li h1 b{
     width: 1px;
@@ -195,8 +183,8 @@
     overflow: hidden;
 }
 .product-cont .product_list li{
-    width: 3.03rem;
-    margin: .18rem;
+    width: 3.15rem;
+    margin: .12rem;
     position: relative;
     float: left;
 }
@@ -230,6 +218,18 @@
     -webkit-box-shadow:0px 0px 1px #ccc;
     -ms-box-shadow:0px 0px 1px #ccc;
     box-shadow:0px 0px 1px #ccc;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.product_more a:hover{
+    color: #FFF;
+    background: #cf0f32;
+    -moz-box-shadow:0px 0px 2px #ccc;
+    -webkit-box-shadow:0px 0px 2px #ccc;
+    -ms-box-shadow:0px 0px 2px #ccc;
+    box-shadow:0px 0px 2px #ccc;
 }
 /*新闻资讯*/
 .news-cont{
@@ -266,7 +266,14 @@
     padding: .18rem;
     float: left;
     position: relative;
-    background: #8d8d8d
+    background: #8d8d8d;
+    -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.news-cont .news_list li:hover .date_cont{
+    background: #cf0f32;
 }
 .news-cont .news_list li .date_cont span{
     width: .5rem;
