--- a/lbtMobile/font-icon/iconfont.css
+++ b/lbtMobile/font-icon/iconfont.css
@@ -9,7 +9,7 @@
 
 .biticon {
   font-family:"biticon" !important;
-  font-size:16px;
+  font-size:.38rem;
   font-style:normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
