--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -570,7 +570,7 @@ left: -.6rem;
 .qs_text h1{
     font-weight: 530;
     padding-bottom: .1rem;
-    color: #000;
+    color: #505050;
     display: block;
     border-bottom: 1px solid #e5e5e5;
     overflow: hidden;
@@ -582,10 +582,88 @@ left: -.6rem;
     padding-top: .04rem;
     line-height: .30rem;
     font-size: .24rem;
-    color: #434343;
+    color: #8d8d8d;
     text-overflow: ellipsis; 
     display: -webkit-box; 
     overflow: hidden; 
     -webkit-box-orient: vertical; 
     -webkit-line-clamp: 3;
+}
+.fwln-cont{
+    width: 100%;
+    overflow: hidden;
+    padding-bottom: .38rem;
+    background: url(../img/pinz_bg.png) top center no-repeat;
+    background-size: 100% 100%;
+}
+.fwln-cont .fwln_text{
+    width: 6.78rem;
+    padding: .36rem ;
+    overflow: hidden;
+    padding-bottom: 0;
+}
+.fwln-cont .fwln_text p{
+    padding: .2rem;
+    line-height: .36rem;
+    text-indent: 2em;
+    color: #FFF;
+    font-size: .28rem;
+}
+.technology{
+    width: 6.06rem;
+    margin: .36rem;
+    padding: .26rem .36rem;
+    border-radius: .1rem;
+    overflow: hidden;
+    -moz-box-shadow:0px 0px 10px #b3b2b2;
+    -webkit-box-shadow:0px 0px 10px #b3b2b2;
+    box-shadow:0px 0px 10px #b3b2b2;    
+}
+#jiShu{
+    width: 100%;
+    height: .6rem;
+    border-bottom: 1px solid #e5e5e5
+}
+#jiShu a{
+    width: 32.26%;
+    height: .6rem;
+    font-size: .34rem;
+    line-height: .4rem;
+    text-align: center;
+    color: #525252;
+    display: inline-block;
+}
+#jiShu a i{
+    color: #4c4c4c;
+    margin-right: .04rem;
+ -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.jishu_hover,#jiShu a:hover{
+    color: #1d53c2!important;
+    border-bottom: .02rem solid #1d53c2!important;
+}
+#jiShu a.jishu_hover i,#jiShu a:hover i{
+    color: #1d53c2!important;
+    margin-right: .04rem;
+}
+.jishutab{
+    width: 100%;
+    padding-top: .2rem;
+}
+.jishubox{
+    width:100%;
+    height:100%;
+    display: none;
+    position:relative;
+ -webkit-transition: all 0.5s;
+    -moz-transition: all 0.5s;
+    -o-transition: all 0.5s;
+    transition: all 0.5s;
+}
+.jishubox li{
+    line-height: .4rem;
+    color: #8d8d8d;
 }
