--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -667,3 +667,157 @@ left: -.6rem;
     line-height: .4rem;
     color: #8d8d8d;
 }
+/*关于我们*/
+#auBgimg{
+    height: 2.4rem;
+    background: url(../img/about_usbg.png) top center no-repeat;
+    background-size: 100% 100%;
+}
+.about_us{
+    width: 6.78rem;
+    padding:.36rem ;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+.huanjing p{
+    padding:0 .1rem;
+}
+.huanjing p img{
+    width: 100%;
+}
+.au_text{
+    padding: .2rem 0;
+}
+.au_text p{
+    padding: .1rem 0;
+    color: #8d8d8d;
+    text-indent: 2em;
+    line-height: .44rem!important;
+}
+/*发展历程*/
+.fzlc_text{ 
+    width: 100%;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+
+.fzlc_text li{
+    padding:0 .36rem ;
+    overflow: hidden;
+    position: relative;
+}
+.fzlc_text li:before{
+    width: .02rem;
+    height: .36rem;
+    content: "";
+    top: 0rem;
+    left: 1.02rem;
+    position: absolute;
+    z-index: 1;
+    background: #1d53c2;
+}
+.fzlc_text li:after{
+    width: .02rem;
+    height: .36rem;
+    content: "";
+    bottom: 0;
+    left: 1.02rem;
+    position: absolute;
+    z-index: 1;
+    background: #1d53c2;
+}
+.fzlc_text .topbef:before{
+    width: 0;
+    height: 0;
+    content: "";
+}
+.fzlc_text .botbef:after{
+    width: 0;
+    height: 0;
+    content: "";
+}
+.fzlc_text li div{
+    float: left;
+    padding: .36rem 0;
+
+}
+.fzlc_text li span{
+    width: 1rem;
+    height: 1rem;
+    font-size: 0.28rem;
+    padding: .18rem;
+    border-radius: 50%;
+    position: relative;
+    z-index: 3;
+    color: #FFF;
+    text-align: center;
+    background: #8d8d8d;
+    background: -webkit-radial-gradient(circle, #2abad8, #1d7cc2); /* Safari 5.1 - 6.0 */
+    background: -o-radial-gradient(circle, #2abad8, #1d7cc2); /* Opera 11.6 - 12.0 */
+    background: -moz-radial-gradient(circle, #2abad8, #1d7cc2); /* Firefox 3.6 - 15 */
+    background: radial-gradient(circle, #2abad8, #1d7cc2); /* 标准的语法 */
+    display: table-cell;
+    vertical-align: middle;
+}
+.fzlc_text li span:before{
+    width: 1.4rem;
+    height: 1.4rem;
+    content: "";
+    border-radius: 50%;
+    top: -.04rem;
+    left: -.04rem;
+    position: absolute;
+    border:.01rem solid #1d53c2;
+    z-index: 2;
+}
+
+.fzlc_text li span:after{
+    width: 1.5rem;
+    height: 1.5rem;
+    content: "";
+    border-radius: 50%;
+    top: -.08rem;
+    left: -.08rem;
+    position: absolute;
+    z-index: 1;
+    -moz-box-shadow:0px 0px 10px #1d53c2;
+    -webkit-box-shadow:0px 0px 10px #1d53c2;
+    box-shadow:0px 0px 10px #1d53c2;  
+}
+.fzlc_text p{
+    height: 1.72rem;
+    font-size: 0.23rem;
+    overflow: hidden;
+    position: relative;
+    color: #343434;
+    padding: .18rem 0 .18rem .5rem;
+    display: table-cell;
+    vertical-align: middle;
+}
+.fzlc_text li p:after{
+    width: .1rem;
+    height: .1rem;
+    content: "";
+    border-radius: 50%;
+    top: 50%;
+    margin-top: -.05rem;
+    left: .25rem;
+    position: absolute;
+    z-index: 1;
+    background: #1d53c2;
+}
+/*百度地图*/
+#baiduMap{
+    width: 100%;
+    height: 5rem;
+}
+#baiduMap .baiduMap_title{
+    line-height: 32px;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+#baiduMap .baiduMap_text{
+    line-height: 32px;
+    font-size: 14px;
+}
