--- a/lbtMobile/css/home.css
+++ b/lbtMobile/css/home.css
@@ -163,19 +163,23 @@
 }
 .product-cont .product_tab{
     width: 100%;
-    height: .8rem;
+    height: .8rem!important;
     border:1px solid #CCC;
     border-left: 0;
     border-right: 0;
 }
 .product-cont .product_tab a{
-    width: 20%;
-    padding: .22rem 0;
+    width: 20%!important;
+    height: .8rem!important;
+    line-height: .8rem!important;
+    font-size: .28rem!important;
     text-align: center;
 }
-.product-cont .product_tab .hover_tab{
-    color: #a53f39;
-    border-bottom: 0.02rem solid #a53f39;
+
+
+.product-cont .product_tab .jishu_hover,.product-cont .product_tab a:hover{
+    color: #a53f39!important;
+    border-bottom: 0.02rem solid #a53f39!important;
 }
 .product-cont .product_list{
     width: 6.78rem;
@@ -361,8 +365,8 @@
 .message_board .mb_div input{
     width: 5.78rem;
     padding-left: 1rem;
-    height: 1rem;
-    line-height: 12em;
+    height: 0.9rem;
+    line-height: 0.9em;
     
 }
 .message_board .mb_div textarea{
@@ -374,8 +378,8 @@
 }
 .message_board .mb_div button{
     width: 6.78rem;
-    height: 1rem;
-    line-height: 1rem;
+    height: 0.9rem;
+    line-height: 0.9rem;
     font-size: .32rem
     background: #efecf0;
     color: #000;
@@ -390,8 +394,8 @@
     background: #cf0f32;
 }
 .mynamel,.myphonel{
-    height: 1rem;
-    line-height: 1rem;
+    height: .9rem;
+    line-height: .9rem;
     position: absolute;
     top: 0;
     left: .18rem;
@@ -642,8 +646,8 @@ left: -.6rem;
     transition: all 0.5s;
 }
 .jishu_hover,#jiShu a:hover{
-    color: #1d53c2!important;
-    border-bottom: .02rem solid #1d53c2!important;
+    color: #1d53c2;
+    border-bottom: .02rem solid #1d53c2;
 }
 #jiShu a.jishu_hover i,#jiShu a:hover i{
     color: #1d53c2!important;
@@ -820,4 +824,138 @@ left: -.6rem;
 #baiduMap .baiduMap_text{
     line-height: .3rem;
     font-size: .18rem;
+}
+
+/*区块链项目服务*/
+.fuwuzc_ul{
+    width: 6.78rem;
+    padding:.36rem ;
+    padding-bottom: 0;
+    overflow: hidden;
+}
+.fuwuzc_ul li{
+    width: 1.54rem;
+    margin: .05rem;
+    padding-top: .1rem;
+    float: left;
+    cursor: pointer;
+    text-align: center;
+    border-radius: 6px;
+    display: block;
+    background: #FFF;
+    border: 1px solid transparent;
+
+}
+.fuwuzc_ul li h1{
+    font-size: .22rem;
+    height: .6rem;
+    overflow: hidden;
+    color: #555;
+    font-weight: normal;
+    line-height: .6rem;
+}
+
+.fuwuzc_ul li .fuwuspan{
+    padding:30px 0 10px 0;
+    width: 100px;
+    display: inline-block;
+}
+.fuwuzc_ul li span{
+    width: 1rem;
+    height: 1rem;
+    line-height: 1rem;
+    border-radius: .5rem;
+    font-size: .5rem;
+    color: #004ea1;
+    display: inline-block;
+    transition: all 0.8s;
+    border: 1px solid #004ea1;
+    -moz-box-shadow:0px 0px 1px #004ea1;
+    -webkit-box-shadow:0px 0px 1px #004ea1;
+    box-shadow:0px 0px 1px #004ea1;
+}
+.fuwuzc_ul li:hover{
+    -moz-box-shadow: 0 0 10px rgba(0,0,0,.05);
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,.05);
+    box-shadow: 0 0 10px rgba(0,0,0,.05);
+}
+.fuwuzc_ul li:hover h1{
+    color: #004ea1;
+}
+.fuwuzc_ul li:hover p{
+    color: #0168d6;
+}
+.fuwuzc_ul li:hover span{
+    transform: scale(1.02) rotate(360deg);
+}
+/*白皮书*/
+.titleXinxi{
+    width: 6.78rem;
+    margin:.36rem;
+    padding-bottom: .16rem!important;
+    border-radius: .2rem;
+    padding-bottom: 0;
+    overflow: hidden;
+    -moz-box-shadow:0px 0px 10px rgba(0,0,0,.08);
+    -webkit-box-shadow:0px 0px 10px rgba(0,0,0,.08);
+    box-shadow:0px 0px 10px rgba(0,0,0,.08);
+}
+.titleXinxi h1{
+    width:100%; 
+    overflow: hidden;
+    text-align: center;
+}
+.titleXinxi h1 span{
+    width:auto; 
+    display:inline-block !important; 
+    display:inline; 
+    height: 1rem;
+    line-height: 1rem;
+    padding: 0 .2rem;
+    font-size: .38rem;    
+    font-weight: normal;
+    position: relative;
+    margin: 0 auto;
+}
+.titleXinxi h1 span:after{
+    content: "";
+    width: 80%;
+    height: 4px;
+    bottom: 0;
+    left: 50%;
+    margin-left: -40%;
+    background: #9fa0a0;
+    position: absolute;
+    display: block;
+    background: #0068b7; 
+    background: -webkit-linear-gradient(left, #0068b7 ,  #00b7ac);
+    background: -o-linear-gradient(right, #0068b7,  #00b7ac); 
+    background: -moz-linear-gradient(right, #0068b7,  #00b7ac); 
+    background: linear-gradient(to right, #0068b7 ,  #00b7ac);
+}
+.titleXinxi p{
+    padding: .04rem .2rem;
+    color: #585858;
+    text-indent: 2em;
+}
+.xinxi_ullist{
+    width: 100%;
+    padding: .2rem 0 0;
+    overflow: hidden;
+}
+.xinxi_ullist li{
+    width: 2.72rem;
+    padding: .14rem;
+    height: 2.1rem;
+    margin: .19rem;
+    font-size: .26rem;
+    color: #585858;
+    border-radius: .06rem;
+    float: left;
+    -moz-box-shadow:0px 0px 10px rgba(0,0,0,.08);
+    -webkit-box-shadow:0px 0px 10px rgba(0,0,0,.08);
+    box-shadow:0px 0px 10px rgba(0,0,0,.08);
+}
+.xinxi_ullist li span{
+    color: #000;
 }
